--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -721,7 +721,7 @@
                                             </StackPanel>
 
                                             <StackPanel Grid.Column="2">
-                                                <StackPanel Name="HltbPanel">
+                                                <StackPanel Name="HltbPanel" Margin="0,0,0,15">
                                                     <StackPanel.Style>
                                                         <Style TargetType="StackPanel">
                                                             <Setter Property="Visibility" Value="Collapsed" />
@@ -765,42 +765,42 @@
                                                                     </GridEx.Style>
                                                                     <Label Content="{DynamicResource LOCHowLongToBeatMainStory}"
                                                                            Style="{DynamicResource HltbGridLabelStyle}"
-                                                                           Tag="{Binding ElementName=MainStoryFormat, Path=Text}" />
+                                                                           Visibility="{Binding ElementName=MainStoryFormat, Path=Visibility}" />
                                                                     <TextBlock Name="MainStoryFormat"
                                                                                Style="{DynamicResource HltbGridTextStyle}"
                                                                                Text="{PluginSettings Plugin=HowLongToBeat, Path=MainStoryFormat, FallbackValue=--}"/>
 
                                                                     <Label Content="{DynamicResource LOCHowLongToBeatMainExtra}"
                                                                            Style="{DynamicResource HltbGridLabelStyle}"
-                                                                           Tag="{Binding ElementName=MainExtraFormat, Path=Text}" />
+                                                                           Visibility="{Binding ElementName=MainExtraFormat, Path=Visibility}" />
                                                                     <TextBlock Name="MainExtraFormat"
                                                                                Style="{DynamicResource HltbGridTextStyle}"
                                                                                Text="{PluginSettings Plugin=HowLongToBeat, Path=MainExtraFormat, FallbackValue=--}"/>
 
                                                                     <Label Content="{DynamicResource LOCHowLongToBeatCompletionist}"
                                                                            Style="{DynamicResource HltbGridLabelStyle}"
-                                                                           Tag="{Binding ElementName=CompletionistFormat, Path=Text}" />
+                                                                           Visibility="{Binding ElementName=CompletionistFormat, Path=Visibility}" />
                                                                     <TextBlock Name="CompletionistFormat"
                                                                                Style="{DynamicResource HltbGridTextStyle}"
                                                                                Text="{PluginSettings Plugin=HowLongToBeat, Path=CompletionistFormat, FallbackValue=--}"/>
 
                                                                     <Label Content="{DynamicResource LOCHowLongToBeatSolo}"
                                                                            Style="{DynamicResource HltbGridLabelStyle}"
-                                                                           Tag="{Binding ElementName=SoloFormat, Path=Text}" />
+                                                                           Visibility="{Binding ElementName=SoloFormat, Path=Visibility}" />
                                                                     <TextBlock Name="SoloFormat"
                                                                                Style="{DynamicResource HltbGridTextStyle}"
                                                                                Text="{PluginSettings Plugin=HowLongToBeat, Path=SoloFormat, FallbackValue=--}"/>
 
                                                                     <Label Content="{DynamicResource LOCHowLongToBeatCoOp}"
                                                                            Style="{DynamicResource HltbGridLabelStyle}"
-                                                                           Tag="{Binding ElementName=CoOpFormat, Path=Text}" />
+                                                                           Visibility="{Binding ElementName=CoOpFormat, Path=Visibility}" />
                                                                     <TextBlock Name="CoOpFormat"
                                                                                Style="{DynamicResource HltbGridTextStyle}"
                                                                                Text="{PluginSettings Plugin=HowLongToBeat, Path=CoOpFormat, FallbackValue=--}"/>
 
                                                                     <Label Content="{DynamicResource LOCHowLongToBeatVs}"
                                                                            Style="{DynamicResource HltbGridLabelStyle}"
-                                                                           Tag="{Binding ElementName=VsFormat, Path=Text}" />
+                                                                           Visibility="{Binding ElementName=VsFormat, Path=Visibility}" />
                                                                     <TextBlock Name="VsFormat"
                                                                                Style="{DynamicResource HltbGridTextStyle}"
                                                                                Text="{PluginSettings Plugin=HowLongToBeat, Path=VsFormat, FallbackValue=--}"/>
@@ -944,12 +944,6 @@
         <Setter Property="FontSize" Value="{DynamicResource FontSize}"/>
         <Setter Property="Foreground" Value="{DynamicResource TextBrushDarker}"/>
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Visibility" Value="Visible" />
-        <Style.Triggers>
-            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag, FallbackValue=--}" Value="--">
-                <Setter Property="Visibility" Value="Collapsed" />
-            </DataTrigger>
-        </Style.Triggers>
     </Style>
     
 </ResourceDictionary>
