--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -12,6 +12,7 @@
     <sys:Boolean x:Key="DetailsViewShowHltbDataGrid">true</sys:Boolean>
     <sys:Boolean x:Key="GridViewAllowUseOfLogos">true</sys:Boolean>
     <sys:Boolean x:Key="GridViewShowHltbDataGrid">true</sys:Boolean>
+    <sys:Boolean x:Key="GridViewEnableCoverShineAnimation">true</sys:Boolean>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
